--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -160,7 +160,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 10px;
+            gap: 5px;
             width: 100%;
         }
 
@@ -209,8 +209,8 @@
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
-            width: 40px;
-            height: 40px;
+            width: 50px;
+            height: 50px;
             padding: 0;
             color: transparent;
             background-color: transparent;
@@ -812,9 +812,9 @@
         const ScreenShot = new Image();
         ScreenShot.src = '/static/Screen.png?t=' + Date.now();
         const ScreenSave = new Image();
-        ScreenShot.src = '/static/Screen_Save.png?t=' + Date.now();
+        ScreenSave.src = '/static/Screen_Save.png?t=' + Date.now();
         const ScreenUpload = new Image();
-        ScreenShot.src = '/static/Screen_Upload.png?t=' + Date.now();
+        ScreenUpload.src = '/static/Screen_Upload.png?t=' + Date.now();
 
         const ChangeColor = new Image();
         ChangeColor.src = '/static/change_color.png?t=' + Date.now();
