--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -812,9 +812,9 @@
         const ScreenShot = new Image();
         ScreenShot.src = '/static/Screen.png?t=' + Date.now();
         const ScreenSave = new Image();
-        ScreenSave.src = '/static/Screen_Save.png?t=' + Date.now();
+        ScreenSave.src = '/static/ScreenSave.png?t=' + Date.now();
         const ScreenUpload = new Image();
-        ScreenUpload.src = '/static/Screen_Upload.png?t=' + Date.now();
+        ScreenUpload.src = '/static/ScreenUpload.png?t=' + Date.now();
 
         const ChangeColor = new Image();
         ChangeColor.src = '/static/change_color.png?t=' + Date.now();
