--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -503,8 +503,8 @@
 
         <div id="top-row">
             <div id="controls">
-                <button id="screenSaveBtn"></button>
-                <button id="screenUploadBtn"></button>
+                <button onclick="saveScreenshot()" id="screenSaveBtn"></button>
+                <button onclick="uploadScreenshots()" id="screenUploadBtn"></button>
                 <button onclick="toggleInvert()" id="invertBtn"></button>
                 <button onclick="prevTurn()" id="prevBtn"></button>
                 <span id="turnLabel">0</span>
