--- a/bot/templates/hint_viewer.html
+++ b/bot/templates/hint_viewer.html
@@ -401,6 +401,11 @@
             transform: translateX(-50%);
         }
 
+        #players-info {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
         .pips-above-board {
             background-color: #000000;
             color: #ffffff;
